--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+geckodriver.log
 
 # Unit test / coverage reports
 htmlcov/
